configure_file(
  input: 'xmlversion.h.in',
  output: 'xmlversion.h',
  configuration: withcdata,
  install: true,
  install_dir: join_paths(get_option('includedir'), 'libxml2/libxml'),
)

install_headers(
  'c14n.h',
  'globals.h',
  'nanohttp.h',
  'schemasInternals.h',
  'xlink.h',
  'xmlreader.h',
  'xmlversion.h.in',
  'catalog.h',
  'hash.h',
  'parser.h',
  'schematron.h',
  'xmlautomata.h',
  'xmlregexp.h',
  'xmlwriter.h',
  'chvalid.h',
  'HTMLparser.h',
  'parserInternals.h',
  'threads.h',
  'xmlerror.h',
  'xmlsave.h',
  'xpath.h',
  'debugXML.h',
  'HTMLtree.h',
  'pattern.h',
  'tree.h',
  'xmlexports.h',
  'xmlschemas.h',
  'xpathInternals.h',
  'dict.h',
  'list.h',
  'relaxng.h',
  'uri.h',
  'xmlIO.h',
  'xmlschemastypes.h',
  'xpointer.h',
  'encoding.h',
  'Makefile.am',
  'SAX2.h',
  'valid.h',
  'xmlmemory.h',
  'xmlstring.h',
  'entities.h',
  'nanoftp.h',
  'SAX.h',
  'xinclude.h',
  'xmlmodule.h',
  'xmlunicode.h',
  subdir: 'libxml2/libxml'
)
