configure_file(
  input: 'xmlversion.h.in',
  output: 'xmlversion.h',
  configuration: withcdata,
  install_dir: join_paths(get_option('includedir'), 'libxml2', 'libxml'),
)

libxml_headers = files(
  'HTMLparser.h',
  'HTMLtree.h',
  'SAX.h',
  'SAX2.h',
  'c14n.h',
  'catalog.h',
  'chvalid.h',
  'debugXML.h',
  'dict.h',
  'encoding.h',
  'entities.h',
  'globals.h',
  'hash.h',
  'list.h',
  'nanoftp.h',
  'nanohttp.h',
  'parser.h',
  'parserInternals.h',
  'pattern.h',
  'relaxng.h',
  'schemasInternals.h',
  'schematron.h',
  'threads.h',
  'tree.h',
  'uri.h',
  'valid.h',
  'xinclude.h',
  'xlink.h',
  'xmlIO.h',
  'xmlautomata.h',
  'xmlerror.h',
  'xmlexports.h',
  'xmlmemory.h',
  'xmlmodule.h',
  'xmlreader.h',
  'xmlregexp.h',
  'xmlsave.h',
  'xmlschemas.h',
  'xmlschemastypes.h',
  'xmlstring.h',
  'xmlunicode.h',
  'xmlwriter.h',
  'xpath.h',
  'xpathInternals.h',
  'xpointer.h',
)
install_headers(libxml_headers, subdir: 'libxml2/libxml')
